condformat 0.7.0.9000
----------------------------------------------------------------

* Feature: rule_text_bold support both in HTML and PDF output
* Feature: rule_text_color (both HTML and PDF outputs)
* Feature: condformat2latex can skip escaping LaTeX code
* Feature: theme_htmlWidget: Allows to customize the number of entries and the widget size.

* Deprecate: theme_htmlTable used to accept `number_of_entries`, `width`, `height`... to
  customize the widget appearence, this is now deprecated as there is `theme_htmlWidget`
  With this change we can better validate theme_htmlTable arguments.
* Deprecate: condformat2widget will not accept arguments to customize the appearance
  of the widget. Use theme_htmlWidget instead.

* Replace dependency: Use grDevices instead of gplots
* Depend on knitr 1.17.9: slidy and other rmarkdown formats are properly detected (#13)

* Documentation: Update API dispatch function to show the new API by default in
  the code completion and in the documentation
* Documentation: Now with markdown in roxygen comments!

* Minor: Generated style CSS rules do not have an initial ";" anymore
* Minor: More modular code. CSS tags to LaTeX conversion is based on S3 methods
  so new rules don't need to touch the code for LaTeX export.

condformat 0.7.0
----------------------------------------------------------------

* Add a new condformat API, that is based on tidy evaluation principles and
  leverages on rlang and tidyselect. The old API is still fully functional but
  deprecated.
* Add a rule_css to let the user specify arbitrary CSS fields. For this rule
  there is no support for PDF or Excel output.
* Improve condformat2excel to export to a specific Excel sheet (#11)
* Fix condformat2latex and add regression test (#9)
* Fix rescale and rescale_mid calls (recent scales use a S3 generic, so we need
  to import it)

condformat 0.6.0
----------------------------------------------------------------
