@@ -28,6 +28,7 @@ export(show_columns)
 export(show_columns_)
 export(show_rows)
 export(show_rows_)
+export(theme_caption)
 export(theme_htmlTable)
 export(theme_htmlWidget)
 export(theme_kable)
